--- a/notebooks/analisis.ipynb
+++ b/notebooks/analisis.ipynb
@@ -5,95 +5,93 @@
    "id": "679d4ba5",
    "metadata": {},
    "source": [
-    "Lectura del archivo y normalizacion de titulos (headers)"
+    "Lectura del archivo y normalizacion del archivo y lecutra de los modulos de la automatizacion\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "784417dd",
+   "execution_count": 8,
+   "id": "5783f35c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '../raw/data/Sales report completa.xlsx'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[25]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01municodedata\u001b[39;00m\n\u001b[32m      3\u001b[39m archivo = \u001b[33m\"\u001b[39m\u001b[33m../raw/data/Sales report completa.xlsx\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m df = \u001b[43mpd\u001b[49m\u001b[43m.\u001b[49m\u001b[43mread_excel\u001b[49m\u001b[43m(\u001b[49m\u001b[43marchivo\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msheet_name\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mVentas Supermercado\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mnormalizar_columna\u001b[39m (nombre):\n\u001b[32m      7\u001b[39m     nombre = unicodedata.normalize(\u001b[33m'\u001b[39m\u001b[33mNFKD\u001b[39m\u001b[33m'\u001b[39m, nombre) .encode(\u001b[33m'\u001b[39m\u001b[33mascii\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mignore\u001b[39m\u001b[33m'\u001b[39m).decode(\u001b[33m'\u001b[39m\u001b[33mASCII\u001b[39m\u001b[33m'\u001b[39m , \u001b[33m\"\u001b[39m\u001b[33mignore\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Projects/Jupyter_notebooks/venv/lib/python3.12/site-packages/pandas/io/excel/_base.py:495\u001b[39m, in \u001b[36mread_excel\u001b[39m\u001b[34m(io, sheet_name, header, names, index_col, usecols, dtype, engine, converters, true_values, false_values, skiprows, nrows, na_values, keep_default_na, na_filter, verbose, parse_dates, date_parser, date_format, thousands, decimal, comment, skipfooter, storage_options, dtype_backend, engine_kwargs)\u001b[39m\n\u001b[32m    493\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(io, ExcelFile):\n\u001b[32m    494\u001b[39m     should_close = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m495\u001b[39m     io = \u001b[43mExcelFile\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    496\u001b[39m \u001b[43m        \u001b[49m\u001b[43mio\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    497\u001b[39m \u001b[43m        \u001b[49m\u001b[43mstorage_options\u001b[49m\u001b[43m=\u001b[49m\u001b[43mstorage_options\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    498\u001b[39m \u001b[43m        \u001b[49m\u001b[43mengine\u001b[49m\u001b[43m=\u001b[49m\u001b[43mengine\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    499\u001b[39m \u001b[43m        \u001b[49m\u001b[43mengine_kwargs\u001b[49m\u001b[43m=\u001b[49m\u001b[43mengine_kwargs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    500\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    501\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m engine \u001b[38;5;129;01mand\u001b[39;00m engine != io.engine:\n\u001b[32m    502\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    503\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mEngine should not be specified when passing \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    504\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33man ExcelFile - ExcelFile already has the engine set\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    505\u001b[39m     )\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Projects/Jupyter_notebooks/venv/lib/python3.12/site-packages/pandas/io/excel/_base.py:1550\u001b[39m, in \u001b[36mExcelFile.__init__\u001b[39m\u001b[34m(self, path_or_buffer, engine, storage_options, engine_kwargs)\u001b[39m\n\u001b[32m   1548\u001b[39m     ext = \u001b[33m\"\u001b[39m\u001b[33mxls\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   1549\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m1550\u001b[39m     ext = \u001b[43minspect_excel_format\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   1551\u001b[39m \u001b[43m        \u001b[49m\u001b[43mcontent_or_path\u001b[49m\u001b[43m=\u001b[49m\u001b[43mpath_or_buffer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstorage_options\u001b[49m\u001b[43m=\u001b[49m\u001b[43mstorage_options\u001b[49m\n\u001b[32m   1552\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1553\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m ext \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m   1554\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m   1555\u001b[39m             \u001b[33m\"\u001b[39m\u001b[33mExcel file format cannot be determined, you must specify \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   1556\u001b[39m             \u001b[33m\"\u001b[39m\u001b[33man engine manually.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   1557\u001b[39m         )\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Projects/Jupyter_notebooks/venv/lib/python3.12/site-packages/pandas/io/excel/_base.py:1402\u001b[39m, in \u001b[36minspect_excel_format\u001b[39m\u001b[34m(content_or_path, storage_options)\u001b[39m\n\u001b[32m   1399\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(content_or_path, \u001b[38;5;28mbytes\u001b[39m):\n\u001b[32m   1400\u001b[39m     content_or_path = BytesIO(content_or_path)\n\u001b[32m-> \u001b[39m\u001b[32m1402\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[43mget_handle\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   1403\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcontent_or_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mrb\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstorage_options\u001b[49m\u001b[43m=\u001b[49m\u001b[43mstorage_options\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mis_text\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\n\u001b[32m   1404\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m handle:\n\u001b[32m   1405\u001b[39m     stream = handle.handle\n\u001b[32m   1406\u001b[39m     stream.seek(\u001b[32m0\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Projects/Jupyter_notebooks/venv/lib/python3.12/site-packages/pandas/io/common.py:882\u001b[39m, in \u001b[36mget_handle\u001b[39m\u001b[34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[39m\n\u001b[32m    873\u001b[39m         handle = \u001b[38;5;28mopen\u001b[39m(\n\u001b[32m    874\u001b[39m             handle,\n\u001b[32m    875\u001b[39m             ioargs.mode,\n\u001b[32m   (...)\u001b[39m\u001b[32m    878\u001b[39m             newline=\u001b[33m\"\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m    879\u001b[39m         )\n\u001b[32m    880\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    881\u001b[39m         \u001b[38;5;66;03m# Binary mode\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m882\u001b[39m         handle = \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mhandle\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mioargs\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmode\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    883\u001b[39m     handles.append(handle)\n\u001b[32m    885\u001b[39m \u001b[38;5;66;03m# Convert BytesIO or file objects passed with an encoding\u001b[39;00m\n",
-      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: '../raw/data/Sales report completa.xlsx'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "# Agrega la raíz del proyecto al sys.path (necesario para importar módulos desde src)\n",
+    "# Esto permite que el script se ejecute desde cualquier directorio\n",
+    "\n",
+    "project_root = os.path.abspath(os.path.join(os.getcwd(), '..'))\n",
+    "if project_root not in sys.path:\n",
+    "    sys.path.append(project_root)\n",
+    "\n",
+    "from src.data_loading import (\n",
+    "    cargar_datos_excel,\n",
+    "    estandarizar_columnas,\n",
+    "    convertir_fechas,\n",
+    "    guardar_procesado\n",
+    ")\n",
+    "\n",
     "import pandas as pd\n",
-    "import unicodedata\n",
-    "archivo = \"../data/raw/Sales report completa.xlsx\"\n",
-    "df = pd.read_excel(archivo, sheet_name=\"Ventas Supermercado\")\n",
-    "\n",
-    "def normalizar_columna (nombre):\n",
-    "    nombre = unicodedata.normalize('NFKD', nombre) .encode('ascii', 'ignore').decode('ASCII' , \"ignore\")\n",
-    "    nombre = nombre.lower() .replace(\" \", \"_\") .replace(\"-\", \"_\") .replace(\".\", \"_\")\n",
-    "    return nombre\n",
-    "\n",
-    "df.columns = [normalizar_columna(col) for col in df.columns]\n",
-    "\n",
-    "print(\"Columnas normalizadas:\")\n",
-    "print(df.columns.tolist())\n"
+    "import unicodedata"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "debfab55",
+   "id": "75590611",
    "metadata": {},
    "source": [
-    "Reajuste del codigo para depurar posibles inconsistencias en el formato de la fecha"
+    "Cargar y mostrar las primeras filas del archivo Excel (comprueba el funcionamiento de la celda anterior)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "81eebdba",
+   "execution_count": 9,
+   "id": "64e01490",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  fecha_salida fecha_entrega\n",
-      "0   2011-01-01    2011-01-06\n",
-      "1   2011-01-01    2011-01-08\n",
-      "2   2011-01-01    2011-01-05\n",
-      "3   2011-01-01    2011-01-05\n",
-      "4   2011-01-01    2011-01-08\n"
+      "   numero_venta  mes_salida  dia_salida  ano_salida  mes_entrega  dia_entrega  \\\n",
+      "0          2040           1           1        2011            1            6   \n",
+      "1         47883           1           1        2011            1            8   \n",
+      "2          1220           1           1        2011            1            5   \n",
+      "3       3647632           1           1        2011            1            5   \n",
+      "4         47883           1           1        2011            1            8   \n",
+      "\n",
+      "   ano_entrega          metodo_envio  numero_cliente   nombre_cliente  ...  \\\n",
+      "0         2011        Standard Class           11280  Toby Braunhardt  ...   \n",
+      "1         2011  Standard      Class            15985      Joseph Holt  ...   \n",
+      "2         2011     Second      Class             735    Annie Thurman  ...   \n",
+      "3         2011          Second Class           14140     Eugene Moren  ...   \n",
+      "4         2011        Standard Class           15985      Joseph Holt  ...   \n",
+      "\n",
+      "        pais       id_producto   ventas cantidad descuento  utilidad  \\\n",
+      "0    Algeria  OFF-TEN-10000025  408.300        2       0.0   106.140   \n",
+      "1  Australia   OFF-SU-10000618  120.366        3       0.1    36.036   \n",
+      "2    Hungary  OFF-TEN-10001585   66.120        4       0.0    29.640   \n",
+      "3     Sweden   OFF-PA-10001492   44.865        3       0.5   -26.055   \n",
+      "4  Australia   FUR-FU-10003447  113.670        5       0.1    37.770   \n",
+      "\n",
+      "   costo_envio  prioridad_envio  fecha_salida  fecha_entrega  \n",
+      "0        35.46           Medium    2011-01-01     2011-01-06  \n",
+      "1         9.72           Medium    2011-01-01     2011-01-08  \n",
+      "2         8.17             High    2011-01-01     2011-01-05  \n",
+      "3         4.82             High    2011-01-01     2011-01-05  \n",
+      "4         4.70           Medium    2011-01-01     2011-01-08  \n",
+      "\n",
+      "[5 rows x 23 columns]\n"
      ]
     }
    ],
    "source": [
-    "# Usar tipo Int64 que permite NaN\n",
-    "for col in ['ano_salida', 'mes_salida', 'dia_salida', 'ano_entrega', 'mes_entrega', 'dia_entrega']:\n",
-    "    df[col] = df[col].astype('Int64')\n",
-    "\n",
-    "# Crear fechas con errores coercibles como NaT\n",
-    "df['fecha_salida'] = pd.to_datetime(\n",
-    "    df[['ano_salida', 'mes_salida', 'dia_salida']].rename(\n",
-    "        columns={'ano_salida': 'year', 'mes_salida': 'month', 'dia_salida': 'day'}\n",
-    "    ), errors='coerce'\n",
-    ")\n",
-    "\n",
-    "df['fecha_entrega'] = pd.to_datetime(\n",
-    "    df[['ano_entrega', 'mes_entrega', 'dia_entrega']].rename(\n",
-    "        columns={'ano_entrega': 'year', 'mes_entrega': 'month', 'dia_entrega': 'day'}\n",
-    "    ), errors='coerce'\n",
-    ")\n",
-    "print(df[['fecha_salida', 'fecha_entrega']].head())\n",
-    "\n",
-    "\n"
+    "ruta_excel = \"../data/raw/Sales report completa.xlsx\"  # Ajusta la ruta si es necesario\n",
+    "df = cargar_datos_excel(ruta_excel, sheet_name=\"Ventas Supermercado\")\n",
+    "df = estandarizar_columnas(df)\n",
+    "df = convertir_fechas(df)\n",
+    "print(df.head())"
    ]
   },
   {
@@ -106,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "2aed13e1",
    "metadata": {},
    "outputs": [
@@ -145,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "999882b6",
    "metadata": {},
    "outputs": [
@@ -184,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "af6d122d",
    "metadata": {},
    "outputs": [
@@ -194,7 +192,7 @@
        "<Axes: title={'center': 'Ventas totales por día'}, xlabel='fecha_salida'>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -223,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "dab4d40d",
    "metadata": {},
    "outputs": [],
@@ -235,7 +233,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
+   "id": "a17c6851",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "estado\n",
+      "Inhambane             23.250\n",
+      "Gangwon               22.410\n",
+      "Zhambyl               22.050\n",
+      "Rize                  18.528\n",
+      "Edirne                18.528\n",
+      "Pernik                14.820\n",
+      "Manicaland            11.853\n",
+      "Bitola                10.980\n",
+      "Kabarole               3.573\n",
+      "Matabeleland North     3.465\n",
+      "Name: ventas, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ventas_por_estado.tail(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "03cc68c7",
    "metadata": {},
    "outputs": [
@@ -285,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "3b4c05b8",
    "metadata": {},
    "outputs": [
@@ -299,7 +326,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "ce8ece65",
    "metadata": {},
    "outputs": [],
@@ -336,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "b27fa1c4",
    "metadata": {},
    "outputs": [
@@ -370,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "b8940456",
    "metadata": {},
    "outputs": [
@@ -391,7 +418,7 @@
        "Name: tiempo_entrega, dtype: float64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "5c225ca7",
    "metadata": {},
    "outputs": [],
@@ -421,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "c65918ea",
    "metadata": {},
    "outputs": [
@@ -450,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "b74d1914",
    "metadata": {},
    "outputs": [
@@ -554,7 +581,7 @@
        "FUR-CH-10002203        30   5003.1000"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
